--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <script type="module" crossorigin src="/assets/index.8be62908.js"></script>
-    <link rel="stylesheet" href="/assets/index.b3877452.css">
+    <script type="module" crossorigin src="/UberTaxi/assets/index.8be62908.js"></script>
+    <link rel="stylesheet" href="/UberTaxi/assets/index.d4c77e48.css">
   </head>
   <body>
     <div id="app" class="light-theme"></div>
