--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/assets/logo.mode=dark.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>우리들의 택시 우티 | UT</title>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/assets/logo.mode=dark.svg"
+    />
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="./main.js"></script>
   </head>
   <body>
     <div id="app" class="light-theme"></div>
     <button class="changeThemeButton">Change Theme</button>
-    <script type="module" src="./main.js"></script>
-
   </body>
 </html>
